--- a/src/components/section/viz/LineChart.scss
+++ b/src/components/section/viz/LineChart.scss
@@ -2,62 +2,22 @@
   position: relative;
   height: 100%;
 
-  .viz-wrap {
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
-  }
   .viz-svg-wrap {
-    flex-shrink: 0;
-    padding-right: 100px;
-    border-right: solid 1px var(--line);
+    width: calc(80vw - 320px);
+    max-width: 1200px;
+    max-height: 1000px;
   }
-  .viz-des-wrap {
-    width: 100%;
-    height: 100vh;
-    position: relative;
+  @media only screen and (max-aspect-ratio: 12/10) {
+    .viz-svg-wrap {
+      width: 80vw;
+      max-height: calc(90vh - 16.4vw);
+    }
   }
-  .viz-des-text {
-    width: 60%;
-    max-width: 320px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    --animation-speed: 800ms;
-    --animation-delay: 0ms;
-    transform: translate3d(-50%, calc(-50% + 3.2em), 0);
-    opacity: 0;
+  @media only screen and (max-width: 900px) and (min-aspect-ratio: 12/10) {
+    .viz-svg-wrap {
+      width: calc(80vw - 180px);
+    }
   }
-  .viz-des-text.on {
-    animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-      blur-light calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
-      up-center var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
-  }
-  .viz-des-text.on-reverse {
-    animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-      blur-light calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
-      down-center var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
-  }
-  .viz-scroll-box {
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-  }
-  .viz-scroll-anchor, .viz-scroll-dummy-anchor {
-    width: 0px;
-    height: 0px;
-    background: var(--line);
-    border-bottom: solid 5px var(--light);
-    border-top: solid 5px var(--light);
-  }
-
   /* Axes */
   .axis>.domain {
     display: none;
@@ -77,7 +37,6 @@
   }
   .bottom-axis {
     stroke: var(--dark);
-    stroke-width: 2;
     stroke-linecap: round;
   }
 
@@ -92,7 +51,7 @@
 
   .data-line {
     stroke: var(--dark);
-    stroke-width: 2;
+    // stroke-width: 2;
     stroke-linejoin: round;
     fill: none;
     transition: stroke 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -102,7 +61,6 @@
   }
   .reg-line {
     stroke: var(--theme);
-    stroke-width: 2;
     stroke-linejoin: round;
     fill: none;
   }
@@ -114,7 +72,7 @@
     font-size: 0.9em;
   }
   .reg-line-label-text>.span {
-    fill: var(--dark);
+    fill: var(--normal);
     transition: fill 800ms var(ease-out-cubic);
   }
   .reg-line-label-text>.span.off {
