--- a/src/components/section/viz/PolarPlot.scss
+++ b/src/components/section/viz/PolarPlot.scss
@@ -2,79 +2,49 @@
   position: relative;
   height: 100%;
 
-  .viz-wrap {
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
-  }
   .viz-svg-wrap {
-    flex-shrink: 0;
-    padding: 0 80px;
-    border-right: solid 1px var(--line);
+    width: calc(80vw - 320px);
+    max-width: 1000px;
+    max-height: 1000px;
   }
-  .viz-des-wrap {
-    width: 100%;
-    height: 100vh;
-    position: relative;
+  @media only screen and (max-aspect-ratio: 12/10) {
+    .viz-svg-wrap {
+      width: 80vw;
+      max-width: calc(90vh - 16.4vw) !important;
+      max-height: calc(90vh - 16.4vw);
+    }
   }
-  .viz-des-text {
-    width: 60%;
-    max-width: 320px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    --animation-speed: 800ms;
-    --animation-delay: 0ms;
-    transform: translate3d(-50%, calc(-50% + 3.2em), 0);
-    opacity: 0;
+  @media only screen and (min-aspect-ratio: 18/17) and (max-height: 1100px) {
+    .viz-svg-wrap {
+      max-width: 80vh;
+    }
   }
-  .viz-des-text.on {
-    animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-      blur-light calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
-      up-center var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
+  @media only screen and (max-width: 900px) and (min-aspect-ratio: 12/10) {
+    .viz-svg-wrap {
+      max-width: 80vh;
+      width: calc(85vw - 180px);
+    }
   }
-  .viz-des-text.on-reverse {
-    animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-      blur-light calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
-      down-center var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
-  }
-  .viz-scroll-box {
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-  }
-  .viz-scroll-anchor, .viz-scroll-dummy-anchor {
-    width: 0px;
-    height: 0px;
-  }
-
   /* Axes */
   .axis .tick, .ticks .tick {
     font-size: 0.8em;
     position: relative;
     fill: var(--light);
-    transition: opacity var(--ease-in-cubic) 800ms;
+    transition: opacity var(--ease-cubic) 800ms;
+  }
+  .tick:not(.secondary) {
+    animation: opacity var(--ease-cubic) 800ms;
   }
   .ticks .tick .text {
     fill: var(--light);
   }
 
   /* Grid lines */
-  .grid>.domain {
-    display: none;
-  }
   .grid-line, .grid-circle {
     fill: none;
     stroke: var(--line);
     stroke-width: 1;
-    transition: opacity var(--ease-in-cubic) 800ms;
+    transition: opacity var(--ease-cubic) 800ms;
   }
   .grid-circle.secondary,
   .r.tick.secondary,
@@ -88,8 +58,6 @@
   }
 
   .data-line {
-    // stroke: var(--dark);
-    stroke-width: 1;
     stroke-linejoin: round;
     fill: none;
     transition: stroke 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
