--- a/src/components/section/Section.css
+++ b/src/components/section/Section.css
@@ -6,7 +6,7 @@
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
-.seciton-content-wrap {
+.section-content-wrap {
   overflow-x: hidden;
 }
 .header-wrap {
