--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
   width: 100%;
   height: 100vh;
   min-height: 460px;
-  background: var(--inverted-background);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,46 +15,85 @@
   padding-right: env(safe-area-inset-right);
   box-sizing: border-box;
 }
-.hero-text {
-  color: var(--inverted-dark);
-  text-align: center;
+.hero-label-text {
+  font-weight: 700;
+}
+.hero-inner-wrap {
   width: 80%;
-  margin-top: 0em;
+  max-width: 1200px;
+}
+.hero-text {
+  color: var(--dark);
+  text-align: center;
 }
 .hero-span {
+  display: block;
   opacity: 0;
   filter: blur(20px);
+  margin-bottom: 0.2em;
 }
 .hero-span.span-1 {
-  animation: opacity 2.4s var(--ease-out-quad) forwards,
-    blur 2.4s var(--ease-out-cubic) forwards;
+  animation: opacity 1.6s var(--ease-out-quad) forwards,
+    blur 1.8s var(--ease-out-cubic) forwards;
 }
 .hero-span.span-2 {
-  animation: opacity 2.4s 200ms var(--ease-out-quad) forwards,
-    blur 2.4s var(--ease-out-cubic) forwards;
+  animation: opacity 1.6s 200ms var(--ease-out-quad) forwards,
+    blur 1.8s var(--ease-out-cubic) forwards;
 }
-.hero-span.span-3 {
-  animation: opacity 2s var(--ease-out-quad) forwards,
-    blur 2.4s var(--ease-out-cubic) forwards;
+.hero-arrow-wrap {
+  position: absolute;
+  bottom: 1.2em;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: opacity 1.6s var(--ease-out-quad) forwards,
+    blur 2s var(--ease-out-cubic) forwards;
+  transition: opacity 600ms var(--ease-out-quad);
 }
-.hero-des {
-  color: var(--inverted-normal);
-  width: 80%;
-  max-width: 38em;
-  text-align: center;
-  opacity: 0;
-  filter: blur(20px);
-  animation: opacity 1.6s 1s var(--ease-out-quad) forwards,
-    blur 1.2s 1s var(--ease-out-cubic) forwards;
+.hero-arrow-wrap.off {
+  animation: opacity-none 400ms var(--ease-out-quad) forwards;
+}
+#arrow-group {
+  fill: none;
+  stroke: var(--dark);
+  stroke-width: 2px;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+.label-wrap {
+  position: fixed;
+  top: 2.4em;
+  left: 1.2em;
+  transform: translate(-50%, 0) rotate(-90deg);
+  display: flex;
+  align-items: center;
+  animation: opacity 1.6s var(--ease-out-quad) forwards,
+    blur 2s var(--ease-out-cubic) forwards;
+}
+.label-text {
+  font-size: 0.8em;
+  font-weight: 700;
+}
+.label-line {
+  width: 1.4em;
+  height: 0;
+  border-bottom: solid 1px var(--normal);
+  margin: 0 0.4em 0.2em;
 }
 
 /* Meta */
 .meta-wrap {
-  padding: 6em 0 4.8em;
+  padding: 6em 0;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
   display: flex;
   justify-content: center;
+  border-top: solid 1px var(--line);
+}
+@supports(padding: max(0px)) {
+  .meta-wrap {
+    padding-bottom: max(6em, env(safe-area-inset-bottom));
+  }
 }
 .meta-wrap p, .meta-wrap a {
   margin-top: 0;
@@ -66,10 +104,6 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 80%;
-  max-width: 720px;
-}
-.meta-column {
-  margin: 0 2.8em 1.2em;
 }
 .meta-column-name {
   text-transform: uppercase;
@@ -79,51 +113,31 @@
 }
 .meta-column-link {
   display: block;
-  text-decoration-color: var(--line);
+  text-decoration-color: var(--light);
 }
 .meta-column-link:hover {
   text-decoration-color: var(--normal);
 }
 
-/* End note */
-.end-note-wrap {
-  padding: 6em 0;
-  display: flex;
-  justify-content: center;
-  border-top: solid 1px var(--line);
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-}
-
-.footer-wrap {
-  height: auto;
-  display: flex;
-  justify-content: space-between;
-  padding: 1.2em 2em;
-  border-top: solid 1px var(--line);
-  font-size: 0.8em;
-}
-@supports(padding: max(0px)) {
-  .footer-wrap {
-    padding-bottom: max(1.2em, env(safe-area-inset-bottom));
-    padding-left: max(2em, env(safe-area-inset-left));
-    padding-right: max(2em, env(safe-area-inset-right));
-  }
-}
-.footer-name {
-  margin: 0;
-  height: 1.2em;
-  overflow: visible;
-}
-.footer-text {
-  margin: 0;
-}
-
 @media only screen and (max-width: 768px) {
   .meta-wrap {
-    padding: 4em 0 2.8em;
-  }
-  .end-note-wrap {
     padding: 4em 0;
+  }
+  @supports(padding: max(0px)) {
+    .meta-wrap {
+      padding-bottom: max(4em, env(safe-area-inset-bottom));
+    }
+  }
+  .hero-arrow-wrap {
+    transform: translateX(-50%) scale(0.6);
+  }
+  .hero-text {
+    white-space: pre-wrap;
+  }
+  .hero-span::after {
+    content: ' ';
+  }
+  .hero-span {
+    display: inline;
   }
 }
