--- a/src/components/section/viz/LineChart.scss
+++ b/src/components/section/viz/LineChart.scss
@@ -3,21 +3,10 @@
   height: 100%;
 
   .viz-svg-wrap {
-    width: calc(80vw - 320px);
+    width: 85%;
     overflow: hidden;
   }
 
-  @media only screen and (max-aspect-ratio: 12/10) {
-    .viz-svg-wrap {
-      width: 90vw;
-      max-height: calc(90vh - 16.4vw);
-    }
-  }
-  @media only screen and (max-width: 900px) and (min-aspect-ratio: 12/10) {
-    .viz-svg-wrap {
-      width: calc(85vw - 180px);
-    }
-  }
   /* Axes */
   .axis>.domain {
     display: none;
@@ -36,7 +25,7 @@
     transform: translateY(-0.8em);
   }
   .bottom-axis {
-    stroke: var(--dark);
+    stroke: var(--light);
     stroke-linecap: round;
   }
 
@@ -50,52 +39,25 @@
   }
 
   .data-line {
-    stroke: var(--dark);
+    stroke: var(--normal);
     stroke-linejoin: round;
     fill: none;
     transition: stroke 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
   }
   .data-line.faded {
-    stroke: var(--line);
+    stroke: var(--light);
+    opacity: 0.2;
   }
   .reg-line {
     stroke: var(--theme);
     stroke-linejoin: round;
     fill: none;
   }
-  .reg-line-label-text {
-    position: absolute;
-    transform: translate(0.9em, 1.27em);
-    font-weight: 700;
-    font-style: italic;
-    font-size: 0.9em;
-  }
-  .reg-line-label-text>.span {
-    fill: var(--normal);
-    transition: fill 800ms var(ease-out-cubic);
-  }
-  .reg-line-label-text>.span.off {
-    fill: var(--light);
-  }
-  .reg-line-label-rect {
-    height: 1.8em;
-    fill: var(--background);
-    stroke: var(--line);
-  }
-  .reg-line-label-rect.linear {
-    width: 4.6em;
-  }
-  .reg-line-label-rect.quadratic {
-    width: 7.6em;
-  }
-  .reg-line-label-rect.cosine {
-    width: 15.6em;
-  }
 
 
   // Hover elements
   .hover-line {
-    stroke: var(--line);
+    stroke: var(--light);
   }
   .hover-data-circle {
     fill: var(--theme);
@@ -104,10 +66,22 @@
     fill: var(--light);
   }
   .hover-text-group {
-    font-size: 0.9em;
+    font-size: 0.8em;
+    padding: 0.8em 2em;
   }
-  .hover-text-group>text {
-    font-weight: 700;
+  .hover-rect {
+    width: 13.1em;
+    height: 2.8em;
+    fill: var(--background);
+    stroke: var(--line);
+    transform: translate(-14.6em, -4.72em);
+    transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    will-change: transform, width, height;
+  }
+  .hover-text-group.big>.hover-rect {
+    width: 17em;
+    height: 6.4em;
+    transform: translate(-18.3em, -8.75em);
   }
 
   .hover-data-label,
@@ -115,48 +89,96 @@
   .hover-diff-label {
     fill: var(--light);
   }
+  .hover-data-label {
+    transform: translate(-13.46em, -3em);
+  }
   .hover-data-text {
     fill: var(--dark);
-    transform: translateX(8.6em);
+    transform: translate(-8.8em, -3em);
+    font-weight: 700;
+  }
+  .hover-data-label.big {
+    transform: translate(-13.46em, -7em);
+  }
+  .hover-data-text.big {
+    transform: translate(-8.8em, -7em);
   }
   .hover-data-text.out {
-    fill: var(--light);
+    fill: var(--normal);
   }
 
   .hover-reg-circle {
     fill: var(--theme);
   }
   .hover-reg-label {
-    transform: translateY(1.8em);
+    transform: translate(-15.51em, -5.2em);
   }
   .hover-reg-text {
     fill: var(--theme);
-    transform: translate(7.5em, 1.8em);
+    transform: translate(-8.8em, -5.2em);
+    font-weight: 700;
   }
 
   .hover-diff-line {
    stroke: var(--error);
   }
   .hover-diff-label {
-    transform: translateY(3.6em);
+    transform: translate(-17em, -3.4em);
   }
   .hover-diff-text {
     fill: var(--error);
-    transform: translate(9.3em, 3.6em);
+    transform: translate(-8.8em, -3.4em);
+    font-weight: 700;
   }
 
   // MSE
   .mse-group {
-    font-size: 1.1em;
+    font-size: 0.8em;
   }
-  .mse-group>text {
-    font-weight: 700;
+  .mse-rect {
+    fill: var(--background);
+    stroke: var(--line);
+    rx: 0.8em;
+    ry: 0.8em;
+    width: 11.4em;
+    height: 5.8em;
+    transform: translate(-1.2em, -1.65em);
+    will-change: width;
+    transition: width 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
   }
-  .mse-label {
+  .mse-rect.quadratic {
+    width: 13.2em;
+  }
+  .mse-rect.cosine {
+    width: 22.4em;
+  }
+  .mse-title {
     fill: var(--light);
   }
-  .mse-text {
+  .mse-equation-label {
+    fill: var(--light);
+    transform: translateY(1.6em);
+  }
+  .mse-equation {
+    position: absolute;
+    fill: var(--light);
+    transform: translate(3.6em ,1.6em);
+  }
+  .mse-equation>.span {
+    fill: var(--normal);
+    font-weight: 700;
+    transition: fill 800ms var(ease-out-cubic);
+  }
+  .mse-equation>.span.off {
+    fill: var(--light);
+  }
+  .mse-acc-label {
+    fill: var(--light);
+    transform: translateY(3.2em);
+  }
+  .mse-acc-text {
     fill: var(--error);
-    transform: translateX(3em);
+    transform: translate(3.2em, 3.2em);
+    font-weight: 700;
   }
 }
