--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,124 @@
+body {
+  margin: 0;
+  font-family: 'Roboto Mono', 'Andale Mono', 'Lucida Sans', monospace;
+  font-weight: 500;
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  --ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
+  --ease-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
+  --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+h1, h2 {
+  font-family: 'Space Grotesk', 'RobAndale Monooto', 'Lucida Sans', sans-serif;
+  font-weight: 700;
+  line-height: 1.4;
+  margin-bottom: 0;
+  color: var(--dark);
+}
+h1 {
+  font-size: 3.6em;
+}
+p, button, g, text, a, noscript {
+  font-size: inherit;
+  font-family: 'Space Grotesk', 'Andale Mono', 'Lucida Sans', monospace;
+  font-weight: 500;
+  letter-spacing: 0.0625em;
+  line-height: 1.625;
+  color: var(--dark);
+  margin: 0;
+}
+svg {
+  overflow: visible;
+}
+
+.limit-box {
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.limited {
+  max-width: 680px;
+}
+.limit-box>p {
+  margin-bottom: 0.8em;
+}
+
+.animate {
+  --animation-speed: 1000ms;
+  --animation-delay: 0ms;
+  backface-visibility: hidden;
+  will-change: transform, opacity, filter;
+}
+.animate.left {
+  opacity: 0;
+  filter: blur(20px);
+  transform: translate3d(2em, 0, 0);
+}
+.animate.right {
+  opacity: 0;
+  filter: blur(20px);
+  transform: translate3d(-2em, 0, 0);
+}
+.animate.left.on {
+  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
+    blur calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
+    left var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
+}
+.animate.right.on {
+  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
+    blur calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
+    right var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
+}
+.animate.blur {
+  opacity: 0;
+}
+.animate.blur.on {
+  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards;
+}
+
+@media only screen and (min-width: 1441px) {
+  body {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  body {
+    font-size: 13px;
+  }
+  h1 {
+    font-size: 3.2em;
+  }
+  h2 {
+    font-size: 3.2em;
+  }
+}
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 12px;
+  }
+  h1 {
+    font-size: 2em;
+  }
+}
 @font-face {
-  font-family: Monument;
-  font-weight: 900;
-  src: url("/data/MonumentExtended-Ultrabold.woff") format("woff");
+  font-family: 'Space Grotesk';
+  font-weight: 700;
+  src: url('/fonts/SpaceGrotesk-Bold.woff2') format('woff2'),
+        url('/fonts/SpaceGrotesk-Bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'Space Grotesk';
+  font-weight: 500;
+  src: url('/fonts/SpaceGrotesk-Medium.woff2') format('woff2'),
+        url('/fonts/SpaceGrotesk-Medium.woff') format('woff');
 }
 @keyframes blur {
   from {
@@ -25,6 +142,14 @@
   }
   to {
     opacity: 1;
+  }
+}
+@keyframes opacity-none {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
 @keyframes up-center {
@@ -57,116 +182,5 @@
   }
   to {
     transform: translate3d(0, 0, 0);
-  }
-}
-
-body {
-  margin: 0;
-  font-family: 'Roboto Mono', 'Andale Mono', 'Lucida Sans', monospace;
-  font-weight: 500;
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  --ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
-  --ease-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
-  --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-
-h1, h2 {
-  font-family: 'Montserrat', 'Roboto', 'Arial', sans-serif;
-  font-weight: 900;
-  line-height: 1.2;
-  margin: 0.2em 0;
-  color: var(--dark);
-}
-h1 {
-  font-size: 20em;
-}
-h2 {
-  font-size: 4em;
-}
-p, button, g, text, a, noscript {
-  font-size: inherit;
-  font-family: 'Roboto Mono', 'Andale Mono', 'Lucida Sans', monospace;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--normal);
-}
-svg {
-  overflow: visible;
-}
-
-.limit-box {
-  width: 80%;
-  max-width: 1200px;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-.limited {
-  max-width: 680px;
-}
-
-.animate {
-  --animation-speed: 1200ms;
-  --animation-delay: 0ms;
-  backface-visibility: hidden;
-  will-change: transform, opacity, filter;
-}
-.animate.left {
-  opacity: 0;
-  filter: blur(20px);
-  transform: translate3d(2em, 0, 0);
-}
-.animate.right {
-  opacity: 0;
-  filter: blur(20px);
-  transform: translate3d(-2em, 0, 0);
-}
-.animate.left.on {
-  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-    blur calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
-    left var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
-}
-.animate.right.on {
-  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-    blur calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards,
-    right var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
-}
-.animate.blur {
-  opacity: 0;
-  filter: blur(20px);
-}
-.animate.blur.on {
-  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quad) forwards,
-    blur calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quad) forwards;
-}
-
-@media only screen and (min-width: 1441px) {
-  body {
-    font-size: 16px;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  body {
-    font-size: 13px;
-  }
-  h1 {
-    font-size: 16em;
-  }
-  h2 {
-    font-size: 3.2em;
-  }
-}
-@media only screen and (max-width: 768px) {
-  body {
-    font-size: 12px;
-  }
-  h1 {
-    font-size: 30vw;
-  }
-  h2 {
-    font-size: 2.4em;
   }
 }
